@@ -7,6 +7,8 @@ Changes log
     - Bugs fixed
       - Fixed parsing of Restlet Method annotations using JDK9. Issue #1285.
         Reported by adolski.
+      - Make sure the Jetty server has released all resources when it fails to start. Issue #1311.
+        Reported by primosK.
     - Enhancements
       - Added automatic deserialization of annotated exceptions in GWT edition. Issue #1306.
         Reported by Roland Beuker.
